--- a/ci/unit.yml
+++ b/ci/unit.yml
@@ -6,7 +6,7 @@ image_resource:
   type: docker-image
   source:
     repository: golang
-    tag: 
+    tag: 1.15.8
 
 inputs:
   - name: dp-frontend-search-controller
