--- a/.nancy-ignore
+++ b/.nancy-ignore
@@ -3,6 +3,7 @@
 # For more info: https://ossindex.sonatype.org/vulnerability/bba60acb-c7b5-4621-af69-f4085a8301d0?component-type=golang&component-name=github.com%2Fcoreos%2Fetcd&utm_source=nancy-client&utm_medium=integration&utm_content=1.0.17
 CVE-2020-15114
 CVE-2020-15136
+CVE-2020-15115
 
 # Skip for indirect dependency golang/github.com/dgrijalva/jwt-go@3.2.0
 # Used by github.com/ONSdigital/dp-component-test v0.4.0
