--- a/Dockerfile.concourse
+++ b/Dockerfile.concourse
@@ -1,5 +1,7 @@
 FROM onsdigital/dp-concourse-tools-ubuntu
 
+RUN apt-get update && apt-get install tzdata
+
 WORKDIR /app/
 
 COPY dp-frontend-search-controller .
