Update repo go version to use 1.19.2
Update ci go versions and update linters based on version 1.50.0:
  - "deadcode" deprecated, use "unused" linter instead
  - "varcheck" deprecated, use "unused" linter instead

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -50,7 +50,7 @@ linters:
   # inverted configuration with `enable-all` and `disable` is not scalable during updates of golangci-lint
   disable-all: true
   enable:
-    - deadcode
+    - unused
     - depguard
     - dogsled
     - errcheck
@@ -71,7 +71,6 @@ linters:
     - typecheck
     - unconvert
     - unused
-    - varcheck
     - whitespace
     - gocognit
     - prealloc
