--- a/.nancy-ignore
+++ b/.nancy-ignore
@@ -1,1 +1,1 @@
-CVE-2024-8421 # vulernability is present in latest golang.org/x/net version
+CVE-2024-8421 # vulnerability is present in latest golang.org/x/net version
