--- a/.golangci.yml
+++ b/.golangci.yml
@@ -44,10 +44,11 @@ linters-settings:
   revive:
     rules:
       # disabled as parameter names are useful for context even when unused, especially in interface implementations
-      - path: _test.go
       - name: unused-parameter
         severity: warning
         disabled: true
+    include:
+      - "**/*_test.go" # Specify test files to include
 
 linters:
   # please, do not use `enable-all`: it's deprecated and will be removed soon.
@@ -86,7 +87,7 @@ issues:
         - errcheck
         - dupl
         - gosec
-    - path: main.go|service|component.go
+    - path: main.go|service.go|component.go
       linters:
         - typecheck
     # Allow dot import in test files for goconvey
@@ -96,10 +97,3 @@ issues:
         - revive
       source: "github.com/smartystreets/goconvey/convey"
   new: false
-
-# golangci.com configuration
-# https://github.com/golangci/golangci/wiki/Configuration
-service:
-  golangci-lint-version: 1.57.x # use the fixed version to not introduce new linters unexpectedly
-  prepare:
-    - echo "here I can run custom commands, but no preparation needed for this repo"
