--- a/Dockerfile.local
+++ b/Dockerfile.local
@@ -1,10 +1,13 @@
-FROM golang:1.23 AS base
+FROM golang:1.23.2-bullseye AS base
 
 ENV GOCACHE=/go/.go/cache GOPATH=/go/.go/path TZ=Europe/London
 
 # Install github.com/cespare/reflex
 RUN GOBIN=/bin go install github.com/cespare/reflex@v0.3.1
 RUN PATH=$PATH:/bin
+
+# Prevent git dubious ownership error
+RUN git config --global --add safe.directory /go
 
 # Clean cache, as we want all modules in the container to be under /go/.go/path
 RUN go clean -modcache
