--- a/ci/lint.yml
+++ b/ci/lint.yml
@@ -5,8 +5,8 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: golang
-    tag: 1.24.3-bullseye
+    repository: onsdigital/dp-concourse-tools-lint-go
+    tag: 1.24.4-bullseye-golangci-lint-2
 
 inputs:
   - name: dp-frontend-search-controller
